k8s/hotel-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-depl
  labels:
    app: hotel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel
  template:
    metadata:
      labels:
        app: hotel
    spec:
      containers:
        - name: hotel
          image: nguyenson255/hotel-booking-hotel-api
          ports:
            - containerPort: 8080
          # env:
          #   - name: DB_HOST
          #     value: "mongodb://mongo-service:27017"
          #   - name: DB_NAME
          #     value: "hotel"

---
apiVersion: v1
kind: Service
metadata:
  name: hotel-service
  labels:
    app: hotel
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: hotel
